# ML-Project-Template

./: .gitignore  config.py  main.py  pyproject.toml
callbacks/: __init__.py  epoch_time_logger.py  gradient_norm_logger.py  iteration_time_logger.py
config/: __init__.py  factory.py  hparams.py
config/datamodules/: mnist.py
datamodules/: __init__.py  mnist.py
